# linear_solver

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  TESTING.md
examples/: CMakeLists.txt  main.cpp  matrix_poisson_P1_14401_CPU_+_ILU0.txt  matrix_poisson_P1_14401_CPU_无预处理.txt  matrix_poisson_P1_14401_GPU_无预处理.txt  run_test.sh  solution_gpu_ilu0.txt  solution_gpu_ilu0_double.txt
include/: amg_coarsening.h  amg_config.h  amg_hierarchy.h  amg_interpolation.h  amg_relaxation.h  amg_solver.h  pcg_solver.h  precision_traits.h  preconditioner.h  solve_stats.h  solvers.h  sparse_utils.h
include/amgcl/: amg.hpp  backend_builtin.hpp  backend_detail_matrix_ops.hpp  backend_interface.hpp  coarsening_detail_galerkin.hpp  coarsening_plain_aggregates.hpp  coarsening_pointwise_aggregates.hpp  coarsening_smoothed_aggregation.hpp  coarsening_tentative_prolongation.hpp  detail_inverse.hpp  detail_qr.hpp  detail_spgemm.hpp  make_solver.hpp  relaxation_gauss_seidel.hpp  reorder_cuthill_mckee.hpp  solver_cg.hpp  solver_detail_default_inner_product.hpp  solver_skyline_lu.hpp  util.hpp
include/amgcl/backend/: cuda.hpp
src/: amg_coarsening.cpp  amg_hierarchy.cpp  amg_interpolation.cpp  amg_relaxation.cpp  amg_solver.cpp  pcg_solver.cpp  preconditioner.cpp  preconditioner_cuda.cu  sparse_utils.cpp
test/: CMakeLists.txt  run_all_tests.sh
test/include/: mm_reader.h
test/matrices_florida/: download_more_matrices.sh
test/src/: combined_test.cpp  mm_reader.cpp
